--- a/web-projects/test-site/index.html
+++ b/web-projects/test-site/index.html
@@ -6,11 +6,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script type="text/javascript" src="scripts/main.js" async></script>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 	<h4>My cat</h4>
 	<img src="images/cat.jpg" alt="My test image">
-	<p>My cat is very <strong>cute</strong></p>
+	<p>My <em>cat</em> is very <strong>cute</strong></p>
 
 	<ul>
 		<li>White</li>
@@ -18,9 +19,11 @@
 		<li>Boy</li>
 	</ul>
 
-	<p>One years old</p>
+	<p>One <em>year</em> old</p>
 
-	<p>I would like to go for Disney Land,So happy,I wonder if it would make me feel surprising and relaxing <a href="https://www.shanghaidisneyresort.com/gonglve/post/whats-hot/offers?source=gl-offers-message-share">Guidence for Disney Land</a>.</p>
+	<input type="text" name="input" disabled="disabled">
+
+	<p>I would like to go for Disney Land,So happy,I wonder if it would make me feel surprising and relaxing <a href="https://www.shanghaidisneyresort.com/gonglve/post/whats-hot/offers?source=gl-offers-message-share" target="_blank"><em>Guidence for Disney Land</em></a>.</p>
 
 	<button>Switch Account</button>
 </body>
