--- a/web-projects/practice/Word-Processing/p3.html
+++ b/web-projects/practice/Word-Processing/p3.html
@@ -30,5 +30,13 @@
 			</li>
 		</ol>
 	</p>
+
+	<p>How to cook Kung Pao chicken?
+		Find more details on <a href="p2.html"> contacts page.</a>
+	</p>
+	<p>Visit Mozilla <a href="images/test.jpg"> images</a>.
+	</p>
+	<p>The story about <a href="p1.html">Romance of the three kingdoms</a></p>
+	<p>Why is so hard to <a href="../Basic Frame/practice1.html">look for a job</a>?</p>
 </body>
 </html>
