--- a/web-projects/practice/Word-Processing/p4.html
+++ b/web-projects/practice/Word-Processing/p4.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<p>The <a href="#Mailing_address">company mailing address</a> can be found at the bottom of this page.</p>
 	<p>I'm creating a link to
 	<a href="https://www.mozilla.org/en-US/"
 	   title="The best place to find more information about Mozilla's mission and how to contribute" target="_blank">the Mozilla homepage</a>.
@@ -16,7 +17,10 @@
 		<a href="https://www.mozilla.org/en-US/developer/" title="to get more Mozilla developers" target="_blank">Mozilla developers</a>.	
 	</p>
 	<a href="https://www.mozilla.org/en-US/">
-			<img src="test.jpg" alt="mozilla logo that links to the mozilla homepage">
+			<img src="images/test.jpg" alt="mozilla logo that links to the mozilla homepage">
 	</a>
+	<h2 id="Mailing_address">Mailing_address</h2>
+	<p>Want to write us a letter? Use our <a href="p1.html#Mailing_address">mailing address</a>.</p>
+
 </body>
 </html>
